app/app.less
@import "./styles/index";

body {
  color: @navy;
}

:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    -webkit-user-select: none;
    user-select: none;
}

.main {
  background: @white;
}

a {
  .transition;
  text-decoration: underline;
}

// Layout
.page-container {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  max-width: 1920px;
  margin: 0 auto;
}

// Type
h3 {
  font-family: 'Roboto';
  font-size: 14px;
  .semibold;
}

h4 {
  font-family: 'Roboto';
  text-transform: uppercase;
  font-size: 13px;
  .letter-spacing;
  .semibold;
  margin-bottom: 20px;
  color: @day-title;
}

.label--essential {
  background: @purple;
  .radius;
  .semibold;
  text-transform: uppercase;
  font-size: 9px;
  color: white;
  letter-spacing: .5px;
  padding: 0px 4px;
  margin-left: 10px;
  line-height: 16px
}

.link {
  .semibold;
  color: @grey;
  .transition;
  text-decoration: none;
  display: flex;
  align-items: center;

  &:hover {
    color: @navy;
  }

  .fa,
  i {
    margin-right: 6px;
    font-size: 15px;
  }
}

.link--underlined {
  span {
    text-decoration: underline;
    font-weight: 400;
  }
}

.link--pointer {
  cursor: pointer;
}

.link--uppercase {
  text-transform: uppercase;
  letter-spacing: .7px;
  font-size: 12px;
}

.label--icon {
  margin-right: 4px;
}

.select {
  position: relative;

  select {
    font-size: 13px;
    margin: 0;
    padding: 0 32px 0 8px;

    option {
      color: @navy;
    }
  }
}

.select-carot {
  position: absolute;
  right: 8px;
  top: 10px;
  font-size: 10px;
  color: @white;
}

.select--onboarding {
  .input-label {
    display: none;
  }

  .input-wrapper {
    width: 100%;
  }

  .multiselect__input {
    background: #45535a;
    border-color: transparent;
    color: white;
  }

  .multiselect__content {
    background: #45535a;
    border-color: transparent;
  }
}

.search-input {
  position: relative;

  input[type=text] {
    background: transparent;
    border: none;
    padding: 0 32px 0 8px;
    color: @grey;
    .radius;
    .transition;

    &:focus {
      background: rgba(255,255,255,.14);
      outline: none;
      box-shadow: none;
    }
  }

  .fa-search {
    position: absolute;
    top: 8px;
    right: 8px;
    font-size: 16px;
  }
}

.search-input--trans {
  input[type=text] {
    border-bottom: 1px solid transparent;
    border-radius: 0;

    &:focus,
    &:active {
      background: transparent;
      color: @white;
      border-bottom: 1px solid rgba(255,255,255,.14);
    }
  }

  &:focus,
  &:active,
  &:hover {
    color: @white;
  }
}

.slide-open {
  position: relative;
}

.slide-open__menu {
  position: absolute;
  background: @day-secondary;
  left: -100px;
  right: -100px;
  width: 170px;
  margin: 0 auto;
  bottom: 33px;
  padding: 12px;
  display: flex;
  flex-direction: column;
  z-index: 10;
  .radius;
  .border;
  .shadow;
}

.tabs {
  background: transparent;
  padding: 0;
}

.tab-button {
  border-bottom: 1px solid transparent;
  height: 54px;
  margin-right: 20px;
  text-transform: uppercase;
  font-size: 12px;
  .semibold;
  letter-spacing: .7px;
  color: @grey;
  .transition;

  .fa,
  i {
    margin-right: 4px;
    font-size: 15px;
    vertical-align: middle;
  }

  &.active,
  &:hover {
    border-color: @navy;
    color: @navy;

    .fa,
    i {
      color: @navy;
    }
  }
}

// TODO: eventuall use LESS variables from twitchalerts
.bgColor-teal {
  background-color: @teal;
}

// TODO: add "disable" and "enable" styles for form controls to styleguide
.input {
  &.disabled {
    opacity: 0.5;

    &.checkbox input:checked~label,
    &.checkbox input~label {
      &:before {
        border-color: gray;
        background: transparent;
      }

      &:after {color: gray}
    }
  }
}

.checkbox {
  label {
    text-transform: none;
  }
}

// Make select boxes look similar to input boxes
select {
  .radius;
  height: 36px;
}

table {
  tr {
    td,
    th {
      &:last-child {
        padding-right: 0;
      }
    }
  }
}

td,
th {
  padding-right: 20px;

  .input-container {
    width: 100%;
    margin-bottom: 0;
    display: block;
  }

  .input-label {
    display: none;
  }

  .input-wrapper {
    width: 100%;
  }
}

th {
  color: @grey;
  text-transform: uppercase;
  .semibold;
  letter-spacing: 1.5px;
  font-size: 11px;
  padding-bottom: 10px;
}

// Scrolls
::-webkit-scrollbar {
  width: 6px;
  height: 8px;
}

::-webkit-scrollbar-track {
  background: @day-border;
  border-radius: 0 3px 3px 0;
}

::-webkit-scrollbar-thumb {
  background-color: @white;
  border: 2px solid @day-border;
  border-right: 1px solid @day-border;
  border-radius: 10px;
}

// Vue transitions
.slide-fade-enter-active,
.slide-fade-leave-active {
  transition: all .3s ease;
}

.slide-fade-enter,
.slide-fade-leave-to {
  transform: translateY(20px);
  opacity: 0;
}

// Night theme rules
.night-theme {
  &.main {
    background: @night-primary;
    color: @night-text;
  }

  a {
    &:hover {
      color: @white;
    }
  }

  .border {
    border: 1px solid transparent;
  }

  h3 {
    color: @grey;
  }

  h4 {
    color: @white;
  }

  .checkbox {
    input:checked~label {
      color: @white;
    }

    label {
      &:before {
        background: transparent;
        border-color: @teal-light-opac;
      }
    }
  }

  .link {
    &:hover {
      color: @white;
    }
  }

  .slide-open__menu {
    background-color: @night-secondary;
    border-color: @night-secondary;
    .night-shadow;
  }

  .slide-open__close {
    &:hover {
      .fa,
      i {
        color: @white;
      }
    }
  }

  .tab-button{
    &.active,
    &:hover {
      color: @white;
      border-bottom-color: @white;

      .fa,
      i {
        color: @white;
      }
    }
  }

  ::-webkit-scrollbar-track {
    background: @night-accent-dark;
  }

  ::-webkit-scrollbar-thumb {
    background-color: @night-accent-light;
    border-color: @night-accent-dark;
  }
}

